--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,14 @@
-version: '3.8'
-
-services:
-  # MongoDB Database
-  mongodb:
-    image: mongo:7.0
-    container_name: mern_mongodb
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: mernapp
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-    networks:
-      - mern_network
-
-  # Backend API
-  backend:
-    build: ./server
-    container_name: mern_backend
-    restart: unless-stopped
-    ports:
-      - "5000:5000"
-    environment:
-      NODE_ENV: development
-      PORT: 5000
-      MONGODB_URI: mongodb://admin:password123@mongodb:27017/mernapp?authSource=admin
-    depends_on:
-      - mongodb
-    volumes:
-      - ./server:/app
-      - /app/node_modules
-    networks:
-      - mern_network
-
-  # Frontend React
-  frontend:
-    build: ./client
-    container_name: mern_frontend
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    environment:
-      REACT_APP_API_URL: http://localhost:5000/api
-    depends_on:
-      - backend
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    networks:
-      - mern_network
-
-volumes:
-  mongodb_data:
-
-networks:
-  mern_network:
-    driver: bridge
+version: '3.8'  
+  
+services:    
+  frontend:  
+    build: ./client  
+    container_name: chronogaz_frontend  
+    restart: unless-stopped  
+    ports:  
+      - "3001:3000"  
+    volumes:  
+      - ./client:/app  
+      - /app/node_modules  
+    environment:  
+      - CHOKIDAR_USEPOLLING=true
